--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "@babel/preset-react": "^7.14.5",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^5.1.2",
         "core-js": "^3.15.1",
         "css-loader": "^5.2.6",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.2",
         "mini-css-extract-plugin": "^1.6.1",
         "react": "^17.0.2",
